# vite-note-rules-js

./: MODULE.bazel  README.md  external  package.json  pnpm-lock.yaml
src/: BUILD  main.ts
toolchain/: BUILD.bazel
